# cmake-avr-toolchain

./: .gitignore  CMakeLists.txt  README.md  avr-gcc.toolchain.cmake
Modules/: FindArduino.cmake
cmake/: avr-gcc.toolchain.cmake
cmake/Modules/: FindArduino.cmake  FindSimAvr.cmake
src/: main.cpp
test/: bitutil.h  main.cpp
